--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,130 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.625rem;
+  --background: oklch(0.2326 0.063 259.44);
+  --foreground: oklch(1 0 0);
+  --card: oklch(0.2156 0.074 262.75);
+  --card-foreground: oklch(1 0 0);
+  --popover: oklch(0.2156 0.074 262.75);
+  --popover-foreground: oklch(1 0 0);
+  --primary: oklch(0.4159 0.111 254.83);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.3013 0.07 259.83);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.2768 0.081 262.05);
+  --muted-foreground: oklch(0.9465 0.018 260.33);
+  --accent: oklch(0.2768 0.081 262.05);
+  --accent-foreground: oklch(1 0 0);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.2768 0.081 262.05);
+  --input: oklch(0.2768 0.081 262.05);
+  --ring: oklch(0.4159 0.111 254.83);
+  --chart-1: oklch(0.4159 0.111 254.83);
+  --chart-2: oklch(0.3013 0.07 259.83);
+  --chart-3: oklch(0.2156 0.074 262.75);
+  --chart-4: oklch(0.2768 0.081 262.05);
+  --chart-5: oklch(0.2326 0.063 259.44);
+  --sidebar: oklch(0.2156 0.074 262.75);
+  --sidebar-foreground: oklch(1 0 0);
+  --sidebar-primary: oklch(0.4159 0.111 254.83);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.2768 0.081 262.05);
+  --sidebar-accent-foreground: oklch(1 0 0);
+  --sidebar-border: oklch(0.2768 0.081 262.05);
+  --sidebar-ring: oklch(0.4159 0.111 254.83);
+  --section-a: oklch(0.2326 0.063 259.44);
+  --section-b: oklch(0.3013 0.07 259.83);
+  --section-c: oklch(0.2156 0.074 262.75);
+  --section-d: oklch(0.2768 0.081 262.05);
+}
+
+.dark {
+  --background: oklch(0.2326 0.063 259.44);
+  --foreground: oklch(1 0 0);
+  --card: oklch(0.2156 0.074 262.75);
+  --card-foreground: oklch(1 0 0);
+  --popover: oklch(0.2156 0.074 262.75);
+  --popover-foreground: oklch(1 0 0);
+  --primary: oklch(0.4159 0.111 254.83);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.3013 0.07 259.83);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.2156 0.074 262.75);
+  --muted-foreground: oklch(0.9465 0.018 260.33);
+  --accent: oklch(0.2768 0.081 262.05);
+  --accent-foreground: oklch(1 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(0.2768 0.081 262.05);
+  --input: oklch(0.2768 0.081 262.05);
+  --ring: oklch(0.4159 0.111 254.83);
+  --chart-1: oklch(0.4159 0.111 254.83);
+  --chart-2: oklch(0.3013 0.07 259.83);
+  --chart-3: oklch(0.2156 0.074 262.75);
+  --chart-4: oklch(0.2768 0.081 262.05);
+  --chart-5: oklch(0.2326 0.063 259.44);
+  --sidebar: oklch(0.2156 0.074 262.75);
+  --sidebar-foreground: oklch(1 0 0);
+  --sidebar-primary: oklch(0.4159 0.111 254.83);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.2768 0.081 262.05);
+  --sidebar-accent-foreground: oklch(1 0 0);
+  --sidebar-border: oklch(0.2768 0.081 262.05);
+  --sidebar-ring: oklch(0.4159 0.111 254.83);
+  --section-a: oklch(0.2326 0.063 259.44);
+  --section-b: oklch(0.3013 0.07 259.83);
+  --section-c: oklch(0.2156 0.074 262.75);
+  --section-d: oklch(0.2768 0.081 262.05);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
